# fast-hash

./: .gitignore  BUILD.bazel  CMakeLists.txt  WORKSPACE  fasthash.c
.github/workflows/: amd64_linux_bazel.yml  amd64_macos_bazel.yml  amd64_windows_bazel.yml
cmake/: FastHashConfig.cmake.in
